--- a/app/src/main/res/drawable/drag_handle_48px.xml
+++ b/app/src/main/res/drawable/drag_handle_48px.xml
@@ -2,8 +2,7 @@
     android:width="48dp"
     android:height="48dp"
     android:viewportWidth="960"
-    android:viewportHeight="960"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="960">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M160,570L160,510L800,510L800,570L160,570ZM160,450L160,390L800,390L800,450L160,450Z"/>
