--- a/app/src/main/res/drawable/expand_content.xml
+++ b/app/src/main/res/drawable/expand_content.xml
@@ -2,8 +2,7 @@
     android:width="48dp"
     android:height="48dp"
     android:viewportWidth="960"
-    android:viewportHeight="960"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="960">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M200,760L200,520L260,520L260,700L440,700L440,760L200,760ZM700,440L700,260L520,260L520,200L760,200L760,440L700,440Z"/>
