--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,11 @@
 <resources>
 
     <style name="Theme.Laiks" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.Laiks.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#FFD5E8CF</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.Laiks</item>
+    </style>
+
 </resources>
